ql/test/library-tests/test.expected
ERROR: Could not resolve predicate extractLineAssignment/4 (test.ql:85,5-33)
ERROR: Could not resolve predicate extractLineAssignment/4 (test.ql:103,5-33)
